# RAG-Powered-Arabic-AI-Assistant

./: README.md  app.py  flask_app.py  gradio_app.py  requirements.txt  test_pred.ipynb
RAG-Powered-Arabic-AI-Assistant/: Makefile  pyproject.toml
RAG-Powered-Arabic-AI-Assistant/docs/: mkdocs.yml
RAG-Powered-Arabic-AI-Assistant/rag_powered_arabic_ai_assistant/: __init__.py
RAG-Powered-Arabic-AI-Assistant/rag_powered_arabic_ai_assistant/modeling/: predict.py  train.py
docs/docs/: index.md
flagged/: log.csv
models/: Check_files_exist.py  predict_model.py
notebooks/: 1-Vector_DB.ipynb  2-RAG_Model.ipynb  2-test.ipynb  3-test.ipynb
rag_powered_arabic_ai_assistant/: dataset.py  features.py  plots.py
