[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rag_powered_arabic_ai_assistant"
version = "0.0.1"
description = "Develop an AI-powered QA assistant that uses Retrieval-Augmented Generation (RAG) to provide accurate, contextually relevant answers to customer questions. The assistant will be able to retrieve relevant information from a SANAD dataset, combine it with generative AI capabilities, and deliver precise and detailed responses to customers."
authors = [
  { name = "Abdelrahman Mohamed" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["rag_powered_arabic_ai_assistant"]
force_sort_within_sections = true
